2011-06-05  Bruno Haible  <bruno@clisp.org>

	ansi-c++-opt: Interoperability with libtool.
	* m4/ansi-c++.m4 (gl_PROG_ANSI_CXX): When a C++ compiler is not found,
	set the variable to "no", not to ":".
	* NEWS: Mention the change.

2011-06-05  Bruno Haible  <bruno@clisp.org>

	acl: Fix test failure on AIX 7.
	* tests/test-sameacls.c (main) [AIX]: Fix aclx_printStr invocation.
	Based on a patch by Jørn Amundsen <Jorn.Amundsen@ntnu.no>.

2011-06-05  Bruno Haible  <bruno@clisp.org>

	pipe-filter-ii: Fix test failure on AIX and IRIX.
	* lib/pipe-filter-ii.c (pipe_filter_ii_execute): When write() fails
	with EAGAIN, retry with a smaller buffer size.

2011-06-05  Bruno Haible  <bruno@clisp.org>

	localename: Fix link dependencies.
	* modules/localename (Link): Mention $(LIBTHREAD) or $(LTLIBTHREAD).
	* modules/localename-tests (Makefile.am): Link test-localename with
	$(LIBTHREAD).

2011-06-05  Bruno Haible  <bruno@clisp.org>

	unsetenv: Avoid gcc warning.
	* lib/unsetenv.c (unsetenv): Provide declaration if system lacks it.

2011-06-05  Bruno Haible  <bruno@clisp.org>

	setenv: Avoid gcc warning.
	* lib/setenv.c (setenv): Provide declaration if system lacks it.

2011-06-05  Bruno Haible  <bruno@clisp.org>

	sys_select: Ensure memset is declared also on AIX 7.
	* lib/sys_select.in.h: Include <string.h> also on AIX.
	* doc/posix-headers/sys_select.texi: Mention that <sys/select.h> is not
	self-contained also on AIX 7.1.

2011-06-04  Bruno Haible  <bruno@clisp.org>

	setlocale: Enable replacement on Cygwin 1.5.
	* m4/setlocale.m4 (gl_FUNC_SETLOCALE): Set REPLACE_SETLOCALE also on
	Cygwin 1.5.x.
	* doc/posix-functions/setlocale.texi: Mention that the problem with the
	LC_CTYPE category also exists on Cygwin 1.5.x.

2011-06-03  Bruno Haible  <bruno@clisp.org>

	Copyright: Use LGPL 2.1 instead of LGPL 2.0.
	* lib/localename.h: Update copyright header.
	* lib/localename.c: Likewise.
	* lib/relocatable.h: Likewise.
	* lib/relocatable.c: Likewise.
